# sample-ai-hotel-revenue-management-system

./: README.md
hotel_revenue_optimization/: CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  DEVELOPER_TASKS.md  Dockerfile  README.md  TESTING_GUIDE.md  authorizer_config.json  best_practices_mcp.py  build.sh  create_correct_target.sh  debug_inputs.py  deploy.sh  events-api.json  hotel-best-practices-tool-schema.json  pyproject.toml  quick_test.py  requirements.txt  revenue_tools_mcp.py  test_agent.sh  test_competitor_analysis.py  test_error_handling.py  test_existing_target.py  test_input_processing.py  test_mcp_direct.py  test_natural_language.py  test_natural_language.sh  test_nlp_simple.py  test_output_difference.py  test_prompt_format.py
hotel_revenue_optimization/scripts/: deploy.sh  deploy_fixed.sh  deploy_to_aws_no_otel.sh  fix_serialization.py  install_otel.sh  launch_local.sh  run_background_disabled_otel.sh  run_background_no_otel.sh  run_disabled_otel.sh  run_local_disabled_otel.sh  run_local_no_otel.sh  run_no_otel.sh  run_with_observability.sh  run_with_otel_disabled.sh  test_local.py  test_response.py  truly_disable_otel.sh
hotel_revenue_optimization/src/: __init__.py
hotel_revenue_optimization/src/hotel_revenue_optimization/: __init__.py  crew.py  main.py
hotel_revenue_optimization/src/hotel_revenue_optimization/config/: __init__.py  agents.yaml  tasks.yaml  tasks_optimized.yaml
hotel_revenue_optimization/src/hotel_revenue_optimization/knowledge/: README.md  __init__.py  competitor_pricing.txt  historical_booking_data.txt  local_events.txt  (+1 more)
(+71 files in other folders)
