[project]
name = "hotel_revenue_optimization"
version = "0.1.0"
description = "Hotel Revenue Optimization System using CrewAI and Amazon Bedrock AgentCore"
authors = [{ name = "AWS" }]
requires-python = ">=3.11,<3.14"
dependencies = [
    "crewai>=0.148.0,<1.0.0",
    "bedrock-agentcore",
    "aws-opentelemetry-distro>=0.10.0",
    "boto3>=1.34.0"
]

[project.optional-dependencies]
dev = [
    "bedrock-agentcore-starter-toolkit==0.1.0"
]
otel = [
    "aws_opentelemetry_distro_genai_beta>=0.1.2"
]


[project.scripts]
hotel_revenue_optimization = "hotel_revenue_optimization.main:run"
run_crew = "hotel_revenue_optimization.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
